--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <iframe src="/univasset/styleheader.html" onload="this.insertAdjacentHTML('afterend', (this.contentDocument.body||this.contentDocument).innerHTML);this.remove()"></iframe>
+        {% include /univasset/styleheader.html %}
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>Random Scraps | Collection of whatever.</title>
