--- a/GFL/starterguide.html
+++ b/GFL/starterguide.html
@@ -57,3 +57,4 @@
 <!-- object name="styleheader" type="text/html" data="/univasset/styleheader.html"></object -->
 <!-- embed type="text/html" src="/univasset/styleheader.html" -->
 <!-- #include virtual="/univasset/styleheader.html" -->
+<!-- iframe src="/univasset/styleheader.html" onload="this.insertAdjacentHTML('afterend', (this.contentDocument.body||this.contentDocument).innerHTML);this.remove()"></iframe -->
