--- a/GFL/index.html
+++ b/GFL/index.html
@@ -78,6 +78,10 @@
             text-decoration: none;
         }
 
+        tr:nth-child(even) {
+            background-color: darkolivegreen;
+        }
+
         /* #region Tags */
         .tags {
             outline: 2px solid aqua;
