--- a/GFL/index.html
+++ b/GFL/index.html
@@ -79,7 +79,7 @@
         }
 
         tr:nth-child(even) {
-            background-color: darkolivegreen;
+            background-color: rgba(85, 107, 47, 0.5);
         }
 
         /* #region Tags */
