--- a/GFL/starterguide.html
+++ b/GFL/starterguide.html
@@ -54,7 +54,8 @@
     </body>
 </html>
 
+<!-- iframe src="/univasset/styleheader.html" onload="this.insertAdjacentHTML('afterend', (this.contentDocument.body||this.contentDocument).innerHTML);this.remove()"></iframe -->
 <!-- object name="styleheader" type="text/html" data="/univasset/styleheader.html"></object -->
 <!-- embed type="text/html" src="/univasset/styleheader.html" -->
 <!-- #include virtual="/univasset/styleheader.html" -->
-<!-- iframe src="/univasset/styleheader.html" onload="this.insertAdjacentHTML('afterend', (this.contentDocument.body||this.contentDocument).innerHTML);this.remove()"></iframe -->
+<!-- {% include /univasset/styleheader.html %} -->
