--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <div w3-include-html="/univasset/styleheader.html"></div>
+        <link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9">
+        <link rel="stylesheet" href="/univasset/externalcss.css">
+        <link rel="icon" type="image/png" href="/univasset/Favicon.png">
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>Random Scraps | Collection of whatever.</title>
