--- a/GFL/index.html
+++ b/GFL/index.html
@@ -187,7 +187,7 @@
             </section>
         </div>
 
-        <script type="text/javascript" src="/externaljavascript.js"></script>
+        <script type="text/javascript" src="/univasset/scripts/externaljavascript.js"></script>
         <script type="text/javascript" src="./tempcard.js"></script>
         <script>
             //#region Constants and Variables
