--- a/GFL/index.html
+++ b/GFL/index.html
@@ -60,6 +60,13 @@
             border: 0px;
         }
 
+        .ytvid {
+            max-width: 640px;
+            width: 100%;
+            aspect-ratio: 16/9;
+            border: 0px;
+        }
+
         figcaption {
             font-size: 1px;
             text-align: center;
