--- a/GFL/index.html
+++ b/GFL/index.html
@@ -19,7 +19,7 @@
             <!-- Setup Google Analytics -->
 
             <!-- You can set your favicon here -->
-            <link rel="icon" type="image/png" href="/univasset/Favicon.png">
+            <link rel="icon" type="image/png" href="/univasset/Favicon.ico">
         <!-- end custom head snippets -->
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
