--- a/GFL/starterguide.html
+++ b/GFL/starterguide.html
@@ -4,7 +4,7 @@
         <include src="/univasset/scripts/styleheader.html"></include>
         <link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
-        <link rel="icon" type="image/png" href="/univasset/images/Favicon.png">
+        <link rel="icon" type="image/x-icon" href="/univasset/images/favicon.ico">
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>Starters Guide | GFL</title>
@@ -19,8 +19,7 @@
         <meta property="og:type" content="website" />
         <meta name="twitter:card" content="summary" />
         <meta property="twitter:title" content="Random Scraps" />
-        <script type="application/ld+json">
-        {"@context":"https://schema.org","@type":"WebSite","description":"Collection of whatever.","headline":"Random Scraps","name":"Random Scraps","url":"https://xxx-yyy-xxx.github.io/"}</script>
+        <script type="application/ld+json">{"@context":"https://schema.org","@type":"WebSite","description":"Collection of whatever.","headline":"Random Scraps","name":"Random Scraps","url":"https://xxx-yyy-xxx.github.io/"}</script>
         <!-- End Jekyll SEO tag -->
     </head>
 
@@ -48,9 +47,3 @@
         <script type="text/javascript" src="/univasset/scripts/includeHTML.js"></script>
     </body>
 </html>
-
-<!-- iframe src="/univasset/styleheader.html" onload="this.insertAdjacentHTML('afterend', (this.contentDocument.body||this.contentDocument).innerHTML);this.remove()"></iframe -->
-<!-- object name="styleheader" type="text/html" data="/univasset/styleheader.html"></object -->
-<!-- embed type="text/html" src="/univasset/styleheader.html" -->
-<!-- #include virtual="/univasset/styleheader.html" -->
-<!-- {% include /univasset/styleheader.html %} -->
