--- a/GFL/starterguide.html
+++ b/GFL/starterguide.html
@@ -4,7 +4,7 @@
         <include src="/univasset/scripts/styleheader.html"></include>
         <link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
-        <link rel="icon" type="image/x-icon" href="/univasset/images/favicon.ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>Starters Guide | GFL</title>
