--- a/univasset/scripts/styleheader.html
+++ b/univasset/scripts/styleheader.html
@@ -1,6 +1,5 @@
 <meta charset='utf-8'>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
     <!-- Setup theme-color -->
@@ -12,4 +11,6 @@
     <!-- end theme color meta headers -->
 
     <!-- Setup Google Analytics -->
+
+    <link rel="icon" type="image/x-icon" href="/univasset/images/favicon.ico" />
 <!-- end custom head snippets -->
