--- a/GFL/index.html
+++ b/GFL/index.html
@@ -29,7 +29,7 @@
             margin: 0px;
         }
 
-        dl, table, figure {
+        dl, table, figure, blockquote {
             margin: 0px;
         }
 
@@ -154,13 +154,12 @@
         </header>
 
         <div class="container">
-            <section id="main_content">
-                <p><h1><a href="./mainpage">Link to topics repository</a></h1></p>
-                
+            <section id="main_content">                
                 <p>v 1.<span id="version-number"></span></p>
 
-                <p><h1><a href="./starterguide">Link to basic game explanation guide</a></h1></p>
-                
+                <p><h1><a href="./starterguide">Link to basic game explanation guide</a></h1></p>                
+                <p><h1><a href="./mainpage">Link to topics repository</a></h1></p>
+
                 <div id="input-type-container">
                     <label class="flex-checked"><input type="radio" name="input-type" onclick="switchInputMode(this)" value="search" checked><h2>Keyword</h2></label>
                     <label class="flex-label"><input type="radio" name="input-type" onclick="switchInputMode(this)" value="tags"><h2>Tags</h2></label>
