--- a/GFL/index.html
+++ b/GFL/index.html
@@ -157,8 +157,8 @@
             <section id="main_content">                
                 <p>v 1.<span id="version-number"></span></p>
 
-                <p><h1><a href="./starterguide">Link to basic game explanation guide</a></h1></p>                
-                <p><h1><a href="./mainpage">Link to topics repository</a></h1></p>
+                <p><h1><a href="./starter">Link to basic game explanation guide</a></h1></p>                
+                <p><h1><a href="https://redd.it/l5a6vz">Link to topics repository</a></h1></p>
 
                 <div id="input-type-container">
                     <label class="flex-checked"><input type="radio" name="input-type" onclick="switchInputMode(this)" value="search" checked><h2>Keyword</h2></label>
