--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -39,8 +39,11 @@
         <div class="container">
             <section id="main_content">
                 <h1>How is the gacha in this game?</h1>
-
                 <p>The only gacha in this game is cosmetics. Characters/Units/Dolls in this game do not go on a rotating banner, instead once they enter the "gacha pool", they're available permanently. In essence, this game is not a gacha game in terms of unit pulling.</p>
+
+                <h1>Is this game F2P?</h1>
+                <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit. The only "P2W" is Protocol Assimilation, especially concerning Ringleaders. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool that won't replace your primary units during end game.</p>
+
             </section>
         </div>
 
