--- a/GFL/index.html
+++ b/GFL/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <include src="/univasset/scripts/styleheader.html"></include>
+        <meta charset='utf-8'>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/assets/css/style.css?v=2d3b5126dd9bdaf552f3aef918356c51b10c15a9">
         <link rel="stylesheet" href="/univasset/scripts/externalcss.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        
+        <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
+            <!-- Setup theme-color -->
+
+            <!-- start theme color meta headers -->
+            <meta name="theme-color" content="#151515">
+            <meta name="msapplication-navbutton-color" content="#151515">
+            <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+            <!-- end theme color meta headers -->
+
+            <!-- Setup Google Analytics -->
+
+            <link rel="icon" type="image/x-icon" href="/univasset/images/favicon.ico" />
+        <!-- end custom head snippets -->
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
         <title>GFL FAQs | Random Scraps.</title>
