--- a/GFL/index.html
+++ b/GFL/index.html
@@ -18,7 +18,7 @@
 
             <!-- Setup Google Analytics -->
 
-            <link rel="icon" type="image/x-icon" href="/univasset/images/favicon.ico" />
+            <link rel="icon" type="image/png" href="/univasset/images/favicon.png" />
         <!-- end custom head snippets -->
 
         <!-- Begin Jekyll SEO tag v2.8.0 -->
