--- a/GFL/index.html
+++ b/GFL/index.html
@@ -65,6 +65,12 @@
             background-color: rgba(85, 107, 47, 0.25);
         }
 
+        .inline-img {
+            display: inline;
+            height: 10px;
+            width: auto;
+        }
+
         /* #region Tags */
         .tags {
             outline: 2px solid aqua;
