--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -56,6 +56,9 @@
                 <h1>How is the gacha in this game?</h1>
                 <p>The only gacha in this game is cosmetics. Characters/Units/Dolls in this game do not go on a rotating banner, instead once they enter the "gacha pool", they're available permanently. In essence, this game is not a gacha game in terms of unit pulling.</p>
 
+                <h1>Is it worth to reroll in this game?</h1>
+                <p>Depends on what you value more. If you want a pretty easy time until endgame, game already gives you free strong dolls as part of the newbie missions. Endgame? This is a game of accumulating various tools instead of just a select few meta characters due to the volatile meta. So for the most part, the answer is no.</p>
+
                 <h1>Is this game F2P?</h1>
                 <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit. The only "P2W" is Protocol Assimilation, especially concerning Ringleaders. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool that won't replace your primary units during end game.</p>
 
