--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -65,6 +65,9 @@
                 <h1>How worth is it to start this game now given how long it's been out?</h1>
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <p>In terms of catching up, there are in-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls, your main fighting force, and Protocol Assimilation for steamrolling early to mid-game content. There's also Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</p>
+
+                <h1>I've heard news about GFL2. Is GFL1 going to be phased out/abandoned?</h1>
+                <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
             </section>
         </div>
 
