--- a/GFL/index.html
+++ b/GFL/index.html
@@ -183,10 +183,7 @@
                 <a id="a-title" href="/"><h1>Random Scraps</h1></a>
                 <h2>Girls' Frontline Reddit Lounge FAQs</h2>
 
-                <section id="downloads">
-                    <a href="../" class="btn btn-github"><span class="icon"></span>Back</a>
-                    <!-- Menu Buttons -->
-                </section>
+                <include src="/univasset/scripts/mainpagebuttons.html"></include>
             </div>
         </header>
 
