--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                 <a id="a-title" href="/"><h1>Random Scraps</h1></a>
                 <h2>Welcome to the Main Page</h2>
             </div>
+
+            <include src="/univasset/scripts/mainpagebuttons.html"></include>
         </header>
 
         <div class="container">
