--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -44,10 +44,7 @@
                 <a id="a-title" href="/"><h1>Random Scraps</h1></a>
                 <h2>Newbie Starter Guide</h2>
 
-                <section id="downloads">
-                    <a href="./" class="btn btn-github"><span class="icon"></span>Back</a>
-                    <!-- Menu Buttons -->
-                </section>
+                <include src="/univasset/scripts/mainpagebuttons.html"></include>
             </div>
         </header>
 
