--- a/univasset/scripts/mainpagebuttons.html
+++ b/univasset/scripts/mainpagebuttons.html
@@ -1,4 +1,4 @@
 <section id="downloads">
-    <a href="/GFL" class="btn btn-github"><span class="icon"></span>Back</a>
+    <a href="/GFL" class="btn btn-github"><span class="icon"></span>Girls' Frontline</a>
     <!-- Menu Buttons -->
 </section>
