--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -50,21 +50,41 @@
 
         <div class="container">
             <section id="main_content">
-                <h1>How is the gacha in this game?</h1>
+                <h1 id="gacha">How is the gacha in this game?</h1>
                 <p>The only gacha in this game is cosmetics. Characters/Units/Dolls in this game do not go on a rotating banner, instead once they enter the "gacha pool", they're available permanently. In essence, this game is not a gacha game in terms of unit pulling.</p>
 
-                <h1>Is it worth to reroll in this game?</h1>
+                <h1 id="reroll">Is it worth to reroll in this game?</h1>
                 <p>Depends on what you value more. If you want a pretty easy time until endgame, game already gives you free strong dolls as part of the newbie missions. Endgame? This is a game of accumulating various tools instead of just a select few meta characters due to the volatile meta. So for the most part, the answer is no.</p>
 
-                <h1>Is this game F2P?</h1>
+                <h1 id="F2P">Is this game F2P?</h1>
                 <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit. The only "P2W" is Protocol Assimilation, especially concerning Ringleaders. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool that won't replace your primary units during end game.</p>
 
-                <h1>How worth is it to start this game now given how long it's been out?</h1>
+                <h1 id="starting">How worth is it to start this game now given how long it's been out?</h1>
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <p>In terms of catching up, there are in-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls, your main fighting force, and Protocol Assimilation for steamrolling early to mid-game content. There's also Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</p>
 
-                <h1>I've heard news about GFL2. Is GFL1 going to be phased out</h1>
+                <h1 id="GFL2">I've heard news about GFL2. Is GFL1 going to be phased out</h1>
                 <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
+
+                <h1 id="guide">Any guide thread I should read before starting out?</h1>
+                <ul>
+                    <li><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">GFL Corner</a></li>
+                    <li><a href="https://gfl.matsuda.tips/blog/?tag=first-steps">Angry Trap Midget/Matsuda</a></li>
+                    <li><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Gamepress - Starting Out</a></li>
+                    <li><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-building-your-first-two-teams">Gamepress - First Team</a></li>
+                    <li><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Gamepress - Priorities</a></li>
+                    <li><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA">Yuko #1428</a></li>
+                    <li><a href="https://docs.google.com/document/u/0/d/1MKtHCtY08wlyIZPLvHUa88oaWQzaKvVSxa0gEFZFMiY">u/ShuviSchwarze</a></li>
+                    <li><a href="https://gamepress.gg/girlsfrontline/gfl-newbie-help-sten-and-skorpion">JP Youtube</a></li>
+                    <li><a href="https://docs.google.com/document/d/1BfHqPiq2E6ZAzm5EZI3SGvqgV58JBQEG3XeTu0hPfYI">Mashpit #1075</a></li>
+                    <li><a href="https://redd.it/8i4odx">u/stae1234</a></li>
+                    <li><a href="https://youtu.be/cP8441Nr12E"></a>Ceia</li>
+                    <li><a href="https://youtube.com/playlist?list=PLEZKU4ZvzVK1sUEs86Or44P5q4qz0Ncox">CosmicArcher - Walkthrough</a></li>
+                    <li><a href="https://docs.google.com/document/d/16g4D18bUGqomAzL-UANAjZAU4HfHruph-R8uyHBhMcE">CosmicArcher - Advanced Info</a></li>
+                    <li><a href="https://www.reddit.com/user/ConductorBichir">u/ConductorBichir</a></li>
+                    <li><a href="https://docs.google.com/document/d/1hdoD9i8gMUsdU22pncGw3o63_-pazXpq84hcvothAT4">/gfg/</a></li>
+                    <li><a href="https://www.reddit.com/r/girlsfrontline/comments/tejuwb/weekly_commanders_lounge_march_15_2022/i0v36wf">u/pointblanksniper</a></li>
+                </ul>
             </section>
         </div>
 
