--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -72,6 +72,7 @@
                     <li><a href="https://gfl.matsuda.tips/blog/?tag=first-steps">Angry Trap Midget/Matsuda</a></li>
                     <li>Gamepress
                         <ul>
+                            <li><a href="https://gamepress.gg/girlsfrontline/gfl-newbie-help-sten-and-skorpion">JP YT</a></li>
                             <li><a href="https://gamepress.gg/girlsfrontline/girls-frontline-starting-out-part-1">Starting Out</a></li>
                             <li><a href="https://gamepress.gg/girlsfrontline/new-career-quests-and-progression-building-your-first-two-teams">First Team</a></li>
                             <li><a href="https://gamepress.gg/girlsfrontline/new-player-priorities-maximizing-resource-management-t-doll-production-and-leveling">Priorities</a></li>
@@ -79,10 +80,9 @@
                     </li>
                     <li><a href="https://docs.google.com/document/d/1TZ5FQO6CvGTw8-XJ9_J4l0yNlHGx5ZlPBmth4NzlbdA">Yuko #1428</a></li>
                     <li><a href="https://docs.google.com/document/u/0/d/1MKtHCtY08wlyIZPLvHUa88oaWQzaKvVSxa0gEFZFMiY">u/ShuviSchwarze</a></li>
-                    <li><a href="https://gamepress.gg/girlsfrontline/gfl-newbie-help-sten-and-skorpion">JP Youtube</a></li>
                     <li><a href="https://docs.google.com/document/d/1BfHqPiq2E6ZAzm5EZI3SGvqgV58JBQEG3XeTu0hPfYI">Mashpit #1075</a></li>
                     <li><a href="https://redd.it/8i4odx">u/stae1234</a></li>
-                    <li><a href="https://youtu.be/cP8441Nr12E"></a>Ceia</li>
+                    <li><a href="https://youtu.be/cP8441Nr12E">Ceia</a></li>
                     <li>CosmicArcher
                         <ul>
                             <li><a href="https://youtube.com/playlist?list=PLEZKU4ZvzVK1sUEs86Or44P5q4qz0Ncox">Walkthrough</a></li>
