--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -68,7 +68,12 @@
 
                 <h1 id="guide">Any guide thread I should read before starting out?</h1>
                 <ul>
-                    <li><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">GFL Corner</a></li>
+                    <li>GFL Corner
+                        <ul>
+                            <li><a href="https://www.gflcorner.com/newbie-guide-to-girls-frontline">Website Guide</a></li>
+                            <li><a href="https://docs.google.com/spreadsheets/d/10LJdksnM3zipOb72IneJD7WVp3765JYJEGg0LnodzDI">Spreadsheet Guide</a></li>
+                        </ul>
+                    </li>
                     <li><a href="https://gfl.matsuda.tips/blog/?tag=first-steps">Angry Trap Midget/Matsuda</a></li>
                     <li>Gamepress
                         <ul>
