--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -57,13 +57,15 @@
                 <p>Depends on what you value more. If you want a pretty easy time until endgame, game already gives you free strong dolls as part of the newbie missions. Endgame? This is a game of accumulating various tools instead of just a select few meta characters due to the volatile meta. So for the most part, the answer is no.</p>
 
                 <h1 id="F2P">Is this game F2P?</h1>
-                <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit. The only "P2W" is Protocol Assimilation, especially concerning Ringleaders. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool that won't replace your primary units during end game.</p>
+                <p>Very much so to the point that quite a number of them are top rankers in major event rankings. It's more about the breadth of units you have than the power of each individual unit.</p>
+                <p>The only "P2W" is Protocol Assimilation, especially concerning Ringleaders, though it's more of pay to catch-up than anything. It's a major power boost to beginners, a crutch for mid-game players, and an occasional useful tool that won't replace your primary units during end game.</p>
 
                 <h1 id="starting">How worth is it to start this game now given how long it's been out?</h1>
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <p>In terms of catching up, there are in-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls, your main fighting force, and Protocol Assimilation for steamrolling early to mid-game content. There's also Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</p>
+                <p>For contents, the only permanently missable ones are probably minigame cosmetics only. Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not OP).</p>
 
-                <h1 id="GFL2">I've heard news about GFL2. Is GFL1 going to be phased out</h1>
+                <h1 id="GFL2">I've heard news about GFL2. Is GFL1 going to be phased out?</h1>
                 <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
 
                 <h1 id="guide">Any guide thread I should read before starting out?</h1>
