--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -64,6 +64,7 @@
                 <p><em>The best time to plant a tree was twenty years ago. The second best time is now.</em></p>
                 <p>In terms of catching up, there are in-game facilities called Forward Basecamp that gives a bevy of items for raising Tactical Dolls, your main fighting force, and Protocol Assimilation for steamrolling early to mid-game content. There's also Newbie Career Quests that gives free preleveled units where some of them, namely AR Team, are meta viable.</p>
                 <p>For contents, the only permanently missable ones are probably minigame cosmetics only. Major events? Campaign Missions. Banner units? None here. Collabs? Reruns are possible (Note: they're not OP).</p>
+                <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>                
 
                 <h1 id="GFL2">I've heard news about GFL2. Is GFL1 going to be phased out?</h1>
                 <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
