--- a/GFL/index.html
+++ b/GFL/index.html
@@ -140,6 +140,11 @@
             color: rgb(233, 161, 152);
             text-shadow: 0 0 5px rgb(255 181 253 / 50%);
         }
+
+        details[open] summary {
+            text-align: center;
+            display: block;
+        }
         /* #endregion */
 
         /* #region Fieldset */
