--- a/GFL/index.html
+++ b/GFL/index.html
@@ -55,6 +55,7 @@
         figcaption {
             font-size: 1px;
             text-align: center;
+            display: block;
         }
 
         dd {
@@ -167,14 +168,12 @@
         /* #endregion */
 
         /* #region Embed Class */
-        /* .gdoc */
         iframe[src*="docs.google.com"] {
             width: 100%;
             aspect-ratio: 1/1;
             border: 0px;
         }
 
-        /* .ytvid */
         iframe[src*="www.youtube.com"] {
             width: 100%;
             aspect-ratio: 16/9;
