--- a/GFL/index.html
+++ b/GFL/index.html
@@ -167,7 +167,7 @@
         }
         /* #endregion */
 
-        /* #region Embed Class */
+        /* #region Embed */
         iframe[src*="docs.google.com"] {
             width: 100%;
             aspect-ratio: 1/1;
