--- a/GFL/starter.html
+++ b/GFL/starter.html
@@ -74,7 +74,7 @@
                 <p>As for storage size, Android ahould be around 5-6GB, iOS is around 10GB.</p>                
 
                 <h1 id="GFL2"><a href="#GFL2">I've heard news about GFL2. Is GFL1 going to be phased out?</a></h1>
-                <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished. The plan is for all games to be played simultaneously.</p>
+                <p>Not anytime soon considering that 3.0 client is made after more than 5 years of its lifespan and the story is nowhere near finished, in addition to the gameplay being completely different. The plan is for all games to be played simultaneously.</p>
 
                 <h1 id="guide"><a href="#guide">Any guide thread I should read before starting out?</a></h1>
                 <ul>
